test/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: testing
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: testing
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: testing
spec:
  selector:
    matchLabels:
      app: testing
  replicas: 1
  template:
    metadata:
      labels:
        app: testing
    spec:
      containers:
        - name: nginx-app
          image: nginx:alpine
          ports:
            - containerPort: 80
