test/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: k8s.gcr.io/busybox
        name: guestbook-ui
        args:
        - /bin/sh
        - -c
        - sleep 5; touch /tmp/healthy; while true; do sleep 30; done;
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 80
