test/redis.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: redis-config
  labels:
    app: testing
data:
  redis-config: |
    maxmemory 48mb
    maxmemory-policy allkeys-lru
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: testing
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  selector:
    app: testing
---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: testing
spec: 
  containers:
    - name: redis
      image: redis:alpine
      command:
        - redis-server
        - "/redis/redis.conf"
      ports:
        - containerPort: 6379
      resources:
        limits:
          cpu: "0.1"
      volumeMounts:
        - mountPath: /redis-data
          name: data
        - mountPath: /redis
          name: config
  volumes:
    - name: data
      emptyDir: {}
    - name: config
      configMap:
        name: redis-config
        items:
          - key: redis-config
            path: redis.conf
