test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test-dep
