test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8088
    targetPort: 80
  selector:
    app: nginx2
